Update email and URL in site configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Het huis van Pollo
-email: your-email@domain.com
-url: https://hethuisvanpollo.nl
+email: info@huisvanpollo.nl
+url: https://huisvanpollo.nl
 description: "Id accusantium natus recusandae unde optio velit eligendi. Fugit molestiae ea sunt ab a molestiae illo. Aut possimus quia quos. Ut rerum officia rerum tempore."
 keywords: "pollo"
 # skills: "Web Developer - Graphic Artist - User Experience Designer"
