Update copyright information in footer settings

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Voornaam Achternaam
+  copyright: Orchis Uitvaartzorg B.V. & Joanne Plattel Uitvaartzorg en -educatie
   location: Plaats
   social: Social
   credits: Credits
