Revise site configuration for improved SEO
Updated site URL, description, and keywords for better SEO.

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Het huis van Pollo
 email: info@huisvanpollo.nl
-url: https://huisvanpollo.nl
-description: "Id accusantium natus recusandae unde optio velit eligendi. Fugit molestiae ea sunt ab a molestiae illo. Aut possimus quia quos. Ut rerum officia rerum tempore."
-keywords: "pollo"
+url: https://www.huisvanpollo.nl
+description: "Het Huis van Pollo is een leskist voor kinderen van 4 tot 12 jaar. Deze leskist is ontwikkeld om met kinderen op een veilige manier na te denken over verlies, afscheid en verdriet in woord en gebaar."
+keywords: "pollo, uitvaartzorg, leskist, educatie, verlies, afscheid, verdriet, rouw, kinderen, kind"
 # skills: "Web Developer - Graphic Artist - User Experience Designer"
 # meta_author: LastName FirstName
 
